--- a/auth-pass-change.html
+++ b/auth-pass-change.html
@@ -51,7 +51,7 @@
                                                 <label class="form-label" for="password-input">كلمة المرور</label>
                                                 <div class="position-relative auth-pass-inputgroup">
                                                     <input type="password" class="form-control pe-5 password-input"
-                                                        placeholder="أدخل كلمة المرور" id="password-input" required>
+                                                        placeholder="أدخل كلمة المرور" id="password-input">
                                                     <button
                                                         class="btn btn-link position-absolute end-0 top-0 text-decoration-none text-muted password-addon"
                                                         type="button" id="password-addon">
@@ -64,8 +64,7 @@
                                                     المرور</label>
                                                 <div class="position-relative auth-pass-inputgroup">
                                                     <input type="password" class="form-control pe-5 password-input"
-                                                        placeholder="أعد إدخال كلمة المرور" id="confirm-password-input"
-                                                        required>
+                                                        placeholder="أعد إدخال كلمة المرور" id="confirm-password-input">
                                                     <button
                                                         class="btn btn-link position-absolute end-0 top-0 text-decoration-none text-muted password-addon"
                                                         type="button" id="password-addon">
@@ -79,7 +78,6 @@
                                             </div>
                                         </form>
                                     </div>
-
                                 </div>
                             </div>
                         </div>
@@ -96,7 +94,7 @@
             </footer>
         </div>
     </section>
-<!-- JAVASCRIPT -->
+    <!-- JAVASCRIPT -->
     <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/libs/simplebar/simplebar.min.js"></script>
     <script src="assets/js/plugins.js"></script>
@@ -108,7 +106,6 @@
     <script src="assets/js/frontend/menu.init.js"></script>
     <script src="assets/js/jquery.fancybox.min.js"></script>
     <script src="assets/js/frontend/custom.js"></script>
-
 </body>
 
 </html>
