--- a/auth-pass-reset.html
+++ b/auth-pass-reset.html
@@ -52,7 +52,7 @@
                                             <div class="mb-4">
                                                 <label for="email" class="form-label">البريد الإلكتروني </label>
                                                 <input type="email" class="form-control" id="email"
-                                                    placeholder="أدخل بريدك الإلكتروني " required />
+                                                    placeholder="أدخل بريدك الإلكتروني "  />
                                             </div>
                                             <div class="text-center mt-4">
                                                 <button class="btn btn-primary w-100" type="submit">إرسال رابط إعادة
