--- a/recruitment-offices-CV.html
+++ b/recruitment-offices-CV.html
@@ -108,6 +108,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="recruitment-request.html"> طلب استقدام </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about-us.html"> من نحن </a>
+                    </li>
                     <li class="nav-item dropdown dropdown-hover">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
@@ -156,7 +159,7 @@
                         <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء
                             حساب </a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#!"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
+                        <a class="dropdown-item" href="auth-logout.html"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
                             الخروج </a>
                     </div>
                 </div>
@@ -533,90 +536,7 @@
                                 </div> <span class="more btn ">عرض التفاصيل</span>
                             </a>
                         </div>
-                        <div class=" col-lg-4 col-sm-6">
-                            <a href="cv-details.html" class="cv">
-                                <img src="assets/images/users/avatar-3.jpg" alt="">
-                                <div class="mainInfo">
-                                    <h4>علي عبدالله الحمود</h4>
-                                    <div class="age"><span>32</span> سنة</div>
-                                </div>
-                                <div class="subInfo">
-                                    <div class="sub">
-                                        <p>الجنسية</p>
-                                        <h6>سعودي</h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p>المهنة</p>
-                                        <h6>مهندس مدني</h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p>الديانة</p>
-                                        <h6>مسلم</h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p>الحالة الاجتماعية</p>
-                                        <h6>متزوج</h6>
-                                    </div>
-                                </div>
-                                <span class="more btn ">عرض التفاصيل</span>
-                            </a>
-                        </div>
-                        <div class=" col-lg-4 col-sm-6">
-                            <a href="cv-details.html" class="cv">
-                                <img src="assets/images/users/avatar-4.jpg" alt="">
-                                <div class="mainInfo">
-                                    <h4>نورة سعد الدين</h4>
-                                    <div class="age"><span>26</span> سنة</div>
-                                </div>
-                                <div class="subInfo">
-                                    <div class="sub">
-                                        <p>الجنسية</p>
-                                        <h6>مصرية</h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p>المهنة</p>
-                                        <h6>محاسبة</h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p>الديانة</p>
-                                        <h6>مسلمة</h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p>الحالة الاجتماعية</p>
-                                        <h6>أعزبة</h6>
-                                    </div>
-                                </div>
-                                <span class="more btn ">عرض التفاصيل</span>
-                            </a>
-                        </div>
-                        <div class=" col-lg-4 col-sm-6">
-                            <a href="cv-details.html" class="cv">
-                                <img src="assets/images/users/avatar-1.jpg" alt="">
-                                <div class="mainInfo">
-                                    <h4> خالد توفيق مجدى </h4>
-                                    <div class="age"> <span> 24</span> سنة </div>
-                                </div>
-                                <div class="subInfo">
-                                    <div class="sub">
-                                        <p> الجنسية </p>
-                                        <h6> هندي </h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p> المهنة </p>
-                                        <h6> سائق خاص </h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p> الديانة </p>
-                                        <h6> مسلم </h6>
-                                    </div>
-                                    <div class="sub">
-                                        <p> الحالة الاجتماعية </p>
-                                        <h6> أعزب </h6>
-                                    </div>
-                                </div>
-                                <span class="more btn "> عرض التفاصيل </span>
-                            </a>
-                        </div>
+                       
                     </div>
                     <div
                         class="pagination-block pagination pagination-separated justify-content-center justify-content-sm-end  my-4">
