--- a/auth-twostep.html
+++ b/auth-twostep.html
@@ -93,11 +93,12 @@
                                                     </div>
                                                 </div><!-- end col -->
                                             </div>
+                                            <div class="mt-3">
+                                                <button type="submit" class="btn btn-primary w-100">تأكيد</button>
+                                            </div>
                                         </form><!-- end form -->
 
-                                        <div class="mt-3">
-                                            <button type="button" class="btn btn-primary w-100">تأكيد</button>
-                                        </div>
+                                        
                                     </div>
                                     <div class="mt-4 text-center">
                                         <p class="mb-0">لم تستلم الرمز؟ <a href="auth-pass-reset.html"
