--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء
                             حساب </a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#!"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
+                        <a class="dropdown-item" href="auth-logout.html"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
                             الخروج </a>
                     </div>
                 </div>
@@ -219,10 +219,10 @@
                                 <p class="fs-20 mb-4">
                                     اكبر تجمع لمكاتب الاستقدام داخل المملكة العربية السعودية
                                 </p>
-                                <button class="btn btn-primary btn-hover">
+                                <a href="recruitment-request.html" class="btn btn-primary btn-hover">
                                     <i class="fa-light fa-briefcase me-1"></i>
                                     طلب استقدام
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -237,10 +237,10 @@
                                 <p class="fs-20 mb-4">
                                     ايدي عاملة مميزة ومدربة بحرفية وتؤدي عملها بأمانة وفقا لمطالب العملاء
                                 </p>
-                                <button class="btn btn-primary btn-hover">
+                                <a href="recruitment-request.html" class="btn btn-primary btn-hover">
                                     <i class="fa-light fa-briefcase me-1"></i>
                                     طلب استقدام
-                                </button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -259,7 +259,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 p-2">
-                    <a href="#!" class="productBanner">
+                    <a href="recruitment-request.html" class="productBanner">
                         <img src="assets/images/first.jpg" alt="">
                         <div class="product-content p-4">
                             <h2 class="text-white"> طلب استقدام </h2>
@@ -267,7 +267,7 @@
                     </a>
                 </div>
                 <div class="col-sm-6 p-2">
-                    <a href="#!" class="productBanner">
+                    <a href="recruitment-request.html" class="productBanner">
                         <img src="assets/images/second.jpg" alt="">
                         <div class="product-content p-4">
                             <h2 class="text-white"> طلب نقل عمالة </h2>
@@ -426,7 +426,7 @@
                     <p class="text-muted fs-14 mb-0"> نعرض لك افضل مكاتب الاستقدام بناء علي عدد الطلبات المؤكدة من
                         قبل العملاء </p>
                 </div>
-                <a href="#!" class="link-effect link-info" style="white-space: nowrap;">
+                <a href="recruitment-offices.html" class="link-effect link-info" style="white-space: nowrap;">
                     عرض الكل
                     <i class="bi bi-arrow-right ms-2"></i>
                 </a>
@@ -720,6 +720,7 @@
     <!-- contact us -->
     <section class="section"
         style="background-image: url('assets/images/s1.webp'); background-size: cover;background-position: center;">
+        <div class="bg-overlay bg-primary" style="opacity: 0.85;"></div>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -918,7 +919,7 @@
                 </div>
             </div>
             <div class="mt-4 text-center">
-                <a href="#!" class="btn btn-soft-primary btn-hover"> عرض كل المقالات
+                <a href="blogs.html" class="btn btn-soft-primary btn-hover"> عرض كل المقالات
                     <i class="bi bi-arrow-right ms-2"></i>
                 </a>
             </div>
