--- a/auth-signin.html
+++ b/auth-signin.html
@@ -76,11 +76,12 @@
                                                 <button class="btn btn-primary w-100" type="submit">تسجيل
                                                     الدخول</button>
                                             </div>
-                                          
+
                                         </form>
                                         <div class="text-center mt-5">
                                             <p class="mb-0">ليس لديك حساب؟ <a href="auth-signup.html"
-                                                    class="fw-semibold text-secondary text-decoration-underline"> إنشاء حساب </a>
+                                                    class="fw-semibold text-secondary text-decoration-underline"> إنشاء
+                                                    حساب </a>
                                             </p>
                                         </div>
                                     </div>
@@ -100,7 +101,7 @@
             </footer>
         </div>
     </section>
-<!-- JAVASCRIPT -->
+    <!-- JAVASCRIPT -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/simplebar.min.js"></script>
     <script src="assets/js/plugins.js"></script>
