--- a/confirmation.html
+++ b/confirmation.html
@@ -153,12 +153,15 @@
                         <!-- item-->
                         <h6 class="dropdown-header"> ريان سلمون </h6>
                         <a class="dropdown-item" href="account.html"> <i class="fa-light fa-user"></i> حسابي </a>
-                        <a class="dropdown-item" href="auth-signin.html"> <i class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
+                        <a class="dropdown-item" href="auth-signin.html"> <i
+                                class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
                             تسجيل الدخول </a>
-                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء حساب </a>
-                        
+                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء
+                            حساب </a>
+
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="auth-logout.html"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
+                        <a class="dropdown-item" href="auth-logout.html"> <i
+                                class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
                             الخروج </a>
                     </div>
                 </div>
@@ -238,7 +241,8 @@
                                 <p class="text-muted mb-0">رقم الطلب : GHERT105467</p>
                                 <div class="mt-4 pt-2 hstack gap-2 justify-content-center">
                                     <a href="order-history.html" class="btn btn-primary btn-hover">عرض التفاصيل </a>
-                                    <a href="index.html" class="btn btn-soft-danger btn-hover">العودة للصفحة الرئيسية </a>
+                                    <a href="index.html" class="btn btn-soft-danger btn-hover">العودة للصفحة الرئيسية
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -323,7 +327,7 @@
             </div>
         </div>
     </section>
-<!-- JAVASCRIPT -->
+    <!-- JAVASCRIPT -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/simplebar.min.js"></script>
     <script src="assets/js/plugins.js"></script>
