--- a/about-us.html
+++ b/about-us.html
@@ -148,12 +148,14 @@
                         <!-- item-->
                         <h6 class="dropdown-header"> ريان سلمون </h6>
                         <a class="dropdown-item" href="account.html"> <i class="fa-light fa-user"></i> حسابي </a>
-                        <a class="dropdown-item" href="auth-signin.html"> <i class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
+                        <a class="dropdown-item" href="auth-signin.html"> <i
+                                class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
                             تسجيل الدخول </a>
-                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء حساب </a>
-                        
+                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء
+                            حساب </a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="auth-logout.html"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
+                        <a class="dropdown-item" href="auth-logout.html"> <i
+                                class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
                             الخروج </a>
                     </div>
                 </div>
@@ -380,9 +382,7 @@
             </div>
         </div>
     </section>
-    <section class="section"
-       >
-        
+    <section class="section">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-6">
