--- a/account.html
+++ b/account.html
@@ -153,12 +153,15 @@
                         <!-- item-->
                         <h6 class="dropdown-header"> ريان سلمون </h6>
                         <a class="dropdown-item" href="account.html"> <i class="fa-light fa-user"></i> حسابي </a>
-                        <a class="dropdown-item" href="auth-signin.html"> <i class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
+                        <a class="dropdown-item" href="auth-signin.html"> <i
+                                class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
                             تسجيل الدخول </a>
-                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء حساب </a>
-                        
+                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء
+                            حساب </a>
+
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="auth-logout.html"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
+                        <a class="dropdown-item" href="auth-logout.html"> <i
+                                class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
                             الخروج </a>
                     </div>
                 </div>
@@ -253,17 +256,17 @@
                                 <li class="nav-item " role="presentation">
                                     <a class="nav-link fs-15" data-bs-toggle="tab" href="#custom-v-pills-list"
                                         role="tab" aria-selected="false" tabindex="-1"><i
-                                            class="bi bi-bookmark-check align-middle me-1"></i> طلبات الاستقدام  </a>
+                                            class="bi bi-bookmark-check align-middle me-1"></i> طلبات الاستقدام </a>
                                 </li>
                                 <li class="nav-item " role="presentation">
                                     <a class="nav-link fs-15" data-bs-toggle="tab" href="#custom-v-pills-order"
                                         role="tab" aria-selected="false" tabindex="-1"><i
-                                            class="bi bi-bag align-middle me-1"></i>  الطلبات السابقة </a>
+                                            class="bi bi-bag align-middle me-1"></i> الطلبات السابقة </a>
                                 </li>
                                 <li class="nav-item " role="presentation">
                                     <a class="nav-link fs-15" data-bs-toggle="tab" href="#custom-v-pills-setting"
                                         role="tab" aria-selected="false" tabindex="-1"><i
-                                            class="bi bi-gear align-middle me-1"></i>  الاعدادات </a>
+                                            class="bi bi-gear align-middle me-1"></i> الاعدادات </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link fs-15" href="auth-logout.html"><i
@@ -1033,8 +1036,8 @@
                                         <div class="flex-shrink-0 mt-sm-0 mt-3">
                                             <h6><span class="text-muted fw-normal">Legal Registration No:</span> <span
                                                     id="legal-register-no">987654</span></h6>
-                                            <h6><span class="text-muted fw-normal">Email:</span> <span
-                                                    id="email">عالم الاستقدام@Nami.com</span></h6>
+                                            <h6><span class="text-muted fw-normal">Email:</span> <span id="email">عالم
+                                                    الاستقدام@Nami.com</span></h6>
                                             <h6><span class="text-muted fw-normal">Website:</span> <a
                                                     href="https://Nami.com/" class="link-primary" target="_blank"
                                                     id="website">www.Nami.com</a></h6>
@@ -1305,7 +1308,7 @@
             </div>
         </div>
     </section>
-<!-- JAVASCRIPT -->
+    <!-- JAVASCRIPT -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/simplebar.min.js"></script>
     <script src="assets/js/plugins.js"></script>
