--- a/blogs.html
+++ b/blogs.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <title>عالم الاستقدام</title>
@@ -24,6 +25,7 @@
     <!-- custom Css-->
     <link href="assets/css/custom.min.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
     <!-- top -->
     <div class="top-tagbar">
@@ -157,7 +159,8 @@
                         <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء
                             حساب </a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="auth-logout.html"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
+                        <a class="dropdown-item" href="auth-logout.html"> <i
+                                class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
                             الخروج </a>
                     </div>
                 </div>
