--- a/cv-details.html
+++ b/cv-details.html
@@ -159,7 +159,8 @@
                         <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء
                             حساب </a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="auth-logout.html"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
+                        <a class="dropdown-item" href="auth-logout.html"> <i
+                                class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
                             الخروج </a>
                     </div>
                 </div>
@@ -275,7 +276,7 @@
                     <div class="ecommerce-product-widgets mt-4 mt-lg-0">
                         <div class="mb-4">
                             <h4 class="lh-base mb-4"> علي عبدالله الحمود </h4>
-                           
+
                             <div class="row">
                                 <div class="col-6 p-2 d-flex align-items-center gap-2">
                                     <i class="fa-regular fa-sparkles fs-16 text-success"></i>
@@ -315,8 +316,8 @@
                                 <div class="col-6 p-2 d-flex align-items-center gap-2">
                                     <i class="fa-regular fa-sparkles fs-16 text-success"></i>
                                     <div class="d-flex flex-column gap-1">
-                                        <span class="text-muted"> سعر الاستقدام  : </span>
-                                        <h6>  2000 ريال  </h6>
+                                        <span class="text-muted"> سعر الاستقدام : </span>
+                                        <h6> 2000 ريال </h6>
                                     </div>
                                 </div>
                             </div>
