--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -153,12 +153,15 @@
                         <!-- item-->
                         <h6 class="dropdown-header"> ريان سلمون </h6>
                         <a class="dropdown-item" href="account.html"> <i class="fa-light fa-user"></i> حسابي </a>
-                        <a class="dropdown-item" href="auth-signin.html"> <i class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
+                        <a class="dropdown-item" href="auth-signin.html"> <i
+                                class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
                             تسجيل الدخول </a>
-                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء حساب </a>
-                        
+                        <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء
+                            حساب </a>
+
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="auth-logout.html"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
+                        <a class="dropdown-item" href="auth-logout.html"> <i
+                                class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
                             الخروج </a>
                     </div>
                 </div>
@@ -304,7 +307,7 @@
                                 ترخيص
                                 العلامة التجارية.
                             </div>
-                            
+
                         </div>
                     </div>
                 </div>
@@ -389,7 +392,7 @@
             </div>
         </div>
     </section>
-<!-- JAVASCRIPT -->
+    <!-- JAVASCRIPT -->
     <script src="assets/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/simplebar.min.js"></script>
     <script src="assets/js/plugins.js"></script>
