--- a/recruitment-offices-CV.html
+++ b/recruitment-offices-CV.html
@@ -159,7 +159,8 @@
                         <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء
                             حساب </a>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="auth-logout.html"> <i class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
+                        <a class="dropdown-item" href="auth-logout.html"> <i
+                                class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
                             الخروج </a>
                     </div>
                 </div>
@@ -536,7 +537,7 @@
                                 </div> <span class="more btn ">عرض التفاصيل</span>
                             </a>
                         </div>
-                       
+
                     </div>
                     <div
                         class="pagination-block pagination pagination-separated justify-content-center justify-content-sm-end  my-4">
