--- a/about-us.html
+++ b/about-us.html
@@ -3,17 +3,22 @@
 
 <head>
     <meta charset="utf-8">
-    <title>About Us | عالم الاستقدام عالم الاستقدام</title>
+    <title>عالم الاستقدام</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta content="عالم الاستقدام" name="description">
     <meta content="Nami" name="author">
-    <!-- App favicon -->
     <link rel="shortcut icon" href="assets/images/fav.svg">
     <!-- Bootstrap Css -->
     <!-- <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
     <link href="assets/css/bootstrap.rtl.min.css" rel="stylesheet" type="text/css">
+    <!--Swiper slider css-->
+    <link href="assets/css/swiper-bundle.min.css" rel="stylesheet" type="text/css" />
+    <!--font Awesome -->
+    <link href="assets/css/all.css" rel="stylesheet" type="text/css" />
     <!-- Icons Css -->
     <link href="assets/css/icons.min.css" rel="stylesheet" type="text/css">
+    <!-- fancybox Css -->
+    <link href="assets/css/jquery.fancybox.min.css" rel="stylesheet" type="text/css">
     <!-- App Css-->
     <!-- <link href="assets/css/app.min.css" rel="stylesheet" type="text/css"> -->
     <link href="assets/css/appAR.css" rel="stylesheet" type="text/css">
@@ -209,11 +214,14 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
-                    <h1 class="fw-bold mb-3">👋 About Us</h1>
-                    <p class="fs-16 text-muted mb-5 mb-lg-3">We’re impartial and independent, and every day we create
-                        distinctive, world-class programmes and content which inform, educate and entertain millions of
-                        people in the around the world. The thought process that led to the items being created and
-                        sold.</p>
+                    <h1 class="fw-bold mb-3">👋 من نحن </h1>
+                    <p class="fs-16 text-muted mb-5 mb-lg-3">
+                        انطلق عالم الاستقدام لخدمات استقدام العمالة المنزلية برؤية
+                        عالمية، يقودها الطموح نحو خلق آليات جديدة وسهلة للوصول إلى أيدي عاملة أمينة وعلى قدر عالي من
+                        الكفاءة وذلك لتقديم حلول الاستقدام لإيجاد العمالة المنزلية الأنسب لعملائنا. يعتبر عالم الاستقدام
+                        أفضل مكتب استقدام عمالة منزلية حاصل على ترخيص من منصة مساند الحكومية لتوفير خدمات استقدام عمالة
+                        منزلية بمعايير الجودة العالمية.
+                    </p>
                 </div>
                 <div class="col-lg-6">
                     <div>
@@ -382,76 +390,7 @@
             </div>
         </div>
     </section>
-    <section class="section">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <div class="text-center">
-                        <h1 class="text-white lh-base text-capitalize">Don't miss out on special offers</h1>
-                        <p class="text-white-75 fs-15 mb-4 pb-2">Never Miss Anything From عالم الاستقدام By Signing
-                            Up To Our Newsletter.</p>
-                        <form action="#!">
-                            <div class="position-relative ecommerce-subscript">
-                                <input type="email" class="form-control rounded-pill border-0"
-                                    placeholder="Enter your email">
-                                <button type="submit" class="btn btn-darken-primary rounded-pill">Subscript Now</button>
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section class="position-relative py-5 border-bottom">
-        <div class="container">
-            <div class="row gy-4 gy-lg-0">
-                <div class="col-lg-3 col-sm-6">
-                    <div class="d-flex align-items-center gap-3">
-                        <div class="flex-shrink-0">
-                            <img src="assets/images/ecommerce/fast-delivery.png" alt="" class="avatar-sm">
-                        </div>
-                        <div class="flex-grow-1">
-                            <h5 class="fs-15">Fast &amp; Secure Delivery</h5>
-                            <p class="text-muted mb-0">Tell about your service.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="d-flex align-items-center gap-3">
-                        <div class="flex-shrink-0">
-                            <img src="assets/images/ecommerce/returns.png" alt="" class="avatar-sm">
-                        </div>
-                        <div class="flex-grow-1">
-                            <h5 class="fs-15">2 Days Return Policy</h5>
-                            <p class="text-muted mb-0">No question ask.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="d-flex align-items-center gap-3">
-                        <div class="flex-shrink-0">
-                            <img src="assets/images/ecommerce/guarantee-certificate.png" alt="" class="avatar-sm">
-                        </div>
-                        <div class="flex-grow-1">
-                            <h5 class="fs-15">Money Back Guarantee</h5>
-                            <p class="text-muted mb-0">Within 5 business days</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-sm-6">
-                    <div class="d-flex align-items-center gap-3">
-                        <div class="flex-shrink-0">
-                            <img src="assets/images/ecommerce/24-hours-support.png" alt="" class="avatar-sm">
-                        </div>
-                        <div class="flex-grow-1">
-                            <h5 class="fs-15">24 X 7 Service</h5>
-                            <p class="text-muted mb-0">Online service for customer</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
     <!-- footer -->
     <section class="section footer-landing pb-0">
         <div class="container">
@@ -529,14 +468,14 @@
         </div>
     </section>
     <!-- JAVASCRIPT -->
-    <script src="assets/libs/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/libs/simplebar/simplebar.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/simplebar.min.js"></script>
     <script src="assets/js/plugins.js"></script>
-    <!-- landing-index js -->
-    <script src="assets/js/frontend/menu.init.js"></script>
-    <script>
-        initModeSetting()
-    </script>
+    <script src="assets/js/isotope.pkgd.min.js"></script>
+    <script src="assets/js/swiper-bundle.min.js"></script>
+    <script src="assets/js/menu.init.js"></script>
+    <script src="assets/js/jquery.fancybox.min.js"></script>
+    <script src="assets/js/custom.js"></script>
 </body>
 
 </html>
