--- a/about-us.html
+++ b/about-us.html
@@ -225,16 +225,16 @@
                 </div>
                 <div class="col-lg-6">
                     <div>
-                        <div class="row align-items-center">
-                            <div class="col-md-6">
+                        <div class="row align-items-center aboutImages">
+                            <div class="col-6 p-1">
                                 <div class="position-relative">
-                                    <img src="assets/images/ecommerce/img-4.jpg" alt="" class="img-fluid rounded">
+                                    <img src="assets/images/s1.webp" alt="" class="img-fluid rounded">
                                 </div>
                             </div>
-                            <div class="col-md-6">
-                                <div class="vstack gap-4">
-                                    <img src="assets/images/ecommerce/img-1.jpg" alt="" class="img-fluid rounded">
-                                    <img src="assets/images/ecommerce/img-3.jpg" alt="" class="img-fluid rounded">
+                            <div class="col-6 p-1">
+                                <div class="vstack gap-2">
+                                    <img src="assets/images/s2.webp" alt="" class="img-fluid rounded">
+                                    <img src="assets/images/s3.webp" alt="" class="img-fluid rounded">
                                 </div>
                             </div>
                         </div>
@@ -243,54 +243,42 @@
             </div>
         </div>
     </section>
-    <div class="ecommerce-about-cta">
+    <div class="ecommerce-about-cta ecommerce-about-service">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
-                    <div class="card card-animate border-0">
+                    <div class="card card-animate border-0 h-100 shadow-lg">
                         <div class="card-body">
-                            <lord-icon src="https://cdn.lordicon.com/fcoczpqi.json" trigger="hover" target="div"
-                                style="width:70px;height:70px">
-                            </lord-icon>
-                            <h5 class="fs-16 mt-3">25,000+ Happy Customer</h5>
-                            <p class="text-muted">Customer happiness goes beyond customer satisfaction by creating an
-                                emotional connection with a brand's.</p>
-                            <div>
-                                <a href="#!" class="link-effect link-primary">Read More <i
-                                        class="bi bi-arrow-right ms-2"></i></a>
-                            </div>
+                            <img src="assets/images/icons/icon1.png" alt="">
+                            <h5 class="fs-16 mt-3"> خدمات استقدام رقمية متكامل </h5>
+                            <p class="text-muted">
+                                خطوات بسيطة تفصلك عن استقدام العمالة المنزلية التي تحتاجها.روافد نجد لخدمات استقدام
+                                عمالة منزلية بمعايير الجودة العالمية.
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="card card-animate border-0">
+                    <div class="card card-animate border-0 h-100 shadow-lg">
                         <div class="card-body">
-                            <lord-icon src="https://cdn.lordicon.com/hbwqfgcf.json" trigger="hover" target="div"
-                                style="width:70px;height:70px">
-                            </lord-icon>
-                            <h5 class="fs-16 mt-3">6+ Years of Experiences</h5>
-                            <p class="text-muted">The years of experience you list on your resume represent the work
-                                experience you have if you have little experience.</p>
-                            <div>
-                                <a href="#!" class="link-effect link-primary">Read More <i
-                                        class="bi bi-arrow-right ms-2"></i></a>
-                            </div>
+                            <img src="assets/images/icons/icon2.png" alt="">
+                            <h5 class="fs-16 mt-3"> خدمة عملاء مميزة </h5>
+                            <p class="text-muted">
+                                فريق خدمة العملاء معكم خطوة بخطوة بدءاَ من طلب استقدام عمالة منزلية
+                                حتى وصول العمالة إليكم.
+                            </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-4">
-                    <div class="card card-animate border-0">
+                    <div class="card card-animate border-0 h-100 shadow-lg">
                         <div class="card-body">
-                            <lord-icon src="https://cdn.lordicon.com/xhbsnkyp.json" trigger="hover" target="div"
-                                style="width:70px;height:70px">
-                            </lord-icon>
-                            <h5 class="fs-16 mt-3">14 Awards Won</h5>
-                            <p class="text-muted">The Global Content Awards celebrate excellence in content marketing
-                                and rewards agencies and in-house teams.</p>
-                            <div>
-                                <a href="#!" class="link-effect link-primary">Read More <i
-                                        class="bi bi-arrow-right ms-2"></i></a>
-                            </div>
+                            <img src="assets/images/icons/icon3.png" alt="">
+                            <h5 class="fs-16 mt-3"> المتابعة المستمرة والتطوير الشامل </h5>
+                            <p class="text-muted">
+                                نوفر كافة الإمكانيات لمتابعة احتياجات العملاء وتسهيل عملهم بسرعة فائقة. كما نطور خدماتنا
+                                بما يتوافق مع نظام العمل السعودي.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -298,99 +286,37 @@
         </div>
     </div>
     <section class="ecommerce-about-team bg-light bg-opacity-50">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <div class="text-center mb-5">
-                        <h2 class="mb-3">Expart Management Team</h2>
-                        <P class="text-muted fs-15">An Expert Leader is first and foremost someone who has deep
-                            expertise in the area that they are leading.</P>
-                    </div>
-                </div>
-            </div>
-            <div class="row gy-4">
-                <div class="col-xl-3 col-md-6">
-                    <div class="team-box text-center">
-                        <div class="team-img">
-                            <img src="assets/images/users/avatar-7.jpg" alt=""
-                                class="img-fluid rounded rounded-circle border border-dashed border-dark border-opacity-25">
-                        </div>
-                        <div class="mt-4 pt-1">
-                            <a href="#!">
-                                <h5>Rachael Larson</h5>
-                            </a>
-                            <p class="text-muted mb-0">Founder</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-md-6">
-                    <div class="team-box text-center">
-                        <div class="team-img">
-                            <img src="assets/images/users/avatar-1.jpg" alt=""
-                                class="img-fluid rounded rounded-circle border border-dashed border-dark border-opacity-25">
-                        </div>
-                        <div class="mt-4 pt-1">
-                            <a href="#!">
-                                <h5>Jennifer Thompson</h5>
-                            </a>
-                            <p class="text-muted mb-0">Sr. Manager</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-md-6">
-                    <div class="team-box text-center">
-                        <div class="team-img">
-                            <img src="assets/images/users/avatar-2.jpg" alt=""
-                                class="img-fluid rounded rounded-circle border border-dashed border-dark border-opacity-25">
-                        </div>
-                        <div class="mt-4 pt-1">
-                            <a href="#!">
-                                <h5>Amanda Rivera</h5>
-                            </a>
-                            <p class="text-muted mb-0">Marketing Executive</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-xl-3 col-md-6">
-                    <div class="team-box text-center">
-                        <div class="team-img">
-                            <img src="assets/images/users/avatar-8.jpg" alt=""
-                                class="img-fluid rounded rounded-circle border border-dashed border-dark border-opacity-25">
-                        </div>
-                        <div class="mt-4 pt-1">
-                            <a href="#!">
-                                <h5>Donald Schmidt</h5>
-                            </a>
-                            <p class="text-muted mb-0">Account Executive</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
     </section>
     <section class="section">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
                     <div>
-                        <img src="assets/images/ecommerce/img-5.jpg" alt="" class="img-fluid rounded">
+                        <img src="assets/images/family2.webp" alt="" class="img-fluid rounded">
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="mt-4 mt-lg-0">
-                        <p class="text-uppercase fw-medium text-muted">Best Products Sales</p>
-                        <h2 class="lh-base fw-semibold mb-3">Desgining Spaces to enahance your business growth</h2>
-                        <P class="text-muted fs-16">A physical office space will promote collaboration and
-                            understanding. Having a physical location for your business allows you to put together the
-                            company that you want in an environment where employees can communicate with each other
-                            without having to go through any extra steps.</P>
-                        <a href="#!" class="fw-medium link-effect">Shop Now <i class="bi bi-arrow-right ms-2"></i></a>
+                        <p class="text-uppercase fw-medium text-muted">مع عالم الاستقدام </p>
+                        <h2 class="lh-base fw-semibold mb-3"> عائلتك اسعد ,حياتك افضل   </h2>
+                        <P class="text-muted fs-16">
+                            نحن نقدم خدمة فريدة من نوعها لعائلتك، حيث نسعى جاهدين لتوفير أوقات سعيدة وجميلة لكم. نحن
+                            ندرك أن الحياة تمر بسرعة وأنه من الصعب العثور على الوقت الكافي للاسترخاء والاستمتاع بالحياة.
+                            لذلك، نحن نسعى جاهدين لتوفير خدماتنا لتحسين جودة حياتكم.
+
+                            نحن نقدم مجموعة واسعة من الخدمات التي تركز على توفير الراحة والسعادة لعائلتك. من خلال
+                            خدماتنا، يمكنكم الاسترخاء والاستمتاع بوقتكم معًا دون القلق بشأن الترتيبات والتفاصيل الصغيرة.
+
+
+                            نحن نؤمن بأن الحياة تستحق العيش بشكل أفضل وأن العائلة هي أهم شيء في الحياة. لذلك، نحن نعمل
+                            بكل جهد لتوفير لكم خدمات عالية الجودة وتجربة لا تُنسى. نحن نفخر بخدماتنا ونتطلع إلى خدمتكم
+                            وتوفير لكم أوقات سعيدة وحياة أفضل.
+                        </P>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
     <!-- footer -->
     <section class="section footer-landing pb-0">
         <div class="container">
