--- a/confirmation.html
+++ b/confirmation.html
@@ -240,9 +240,10 @@
                                     تفاصيل طلبك.</p>
                                 <p class="text-muted mb-0">رقم الطلب : GHERT105467</p>
                                 <div class="mt-4 pt-2 hstack gap-2 justify-content-center">
-                                    <a href="order-history.html" class="btn btn-primary btn-hover">عرض التفاصيل </a>
-                                    <a href="index.html" class="btn btn-soft-danger btn-hover">العودة للصفحة الرئيسية
+                                    <a href="index.html" class="btn btn-soft-danger btn-hover">
+                                        العودة للصفحة الرئيسية
                                     </a>
+                                    <a href="account.html" class="btn btn-primary btn-hover">عرض التفاصيل </a>
                                 </div>
                             </div>
                         </div>
