--- a/account.html
+++ b/account.html
@@ -223,12 +223,13 @@
                             <div>
                                 <h5 class="fs-18"> ريان سلمون </h5>
                                 <div class="text-muted">
-                                    <i class="bi bi-geo-alt"></i> الرياض / المملكة العربية السعودية
+                                    <i class="bi bi-envelope"></i> 
+                                    email@email.com
                                 </div>
                             </div>
                             <div class="ms-md-auto">
                                 <!-- <p class="mb-0">عالم الاستقدام Member Since Jan 2020</p> -->
-                                <a href="product-list.html" class="btn btn-success btn-hover">
+                                <a href="recruitment-request.html" class="btn btn-success btn-hover">
                                     <i class="fa-light fa-briefcase me-1"></i>
                                     طلب استقدام
                                 </a>
@@ -284,11 +285,10 @@
                                     <div class="card">
                                         <div class="card-body">
                                             <div class="d-flex mb-4">
-                                                <h6 class="fs-16 text-decoration-underline flex-grow-1 mb-0">Personal
-                                                    Info</h6>
-                                                <div class="flex-shrink-0">
-                                                    <a href="#!" class="badge badge-soft-dark">Edit</a>
-                                                </div>
+                                                <h6 class="fs-16 text-decoration-underline flex-grow-1 mb-0">
+                                                    المعلومات الشخصية
+                                                </h6>
+                                               
                                             </div>
                                             <div class="table-responsive table-card px-1">
                                                 <table class="table table-borderless table-sm">
