--- a/cv-details.html
+++ b/cv-details.html
@@ -325,10 +325,10 @@
                         <div class="col-lg-12">
                             <div class="mt-3">
                                 <div class="hstack gap-2">
-                                    <button type="button" class="btn btn-primary btn-hover w-100">
+                                    <a href="confirmation.html" class="btn btn-primary btn-hover w-100">
                                         <i class="fa-light fa-briefcase me-2"></i>
                                         طلب استقدام
-                                    </button>
+                                    </a>
                                 </div>
                             </div>
                         </div>
