--- a/confirmation.html
+++ b/confirmation.html
@@ -158,7 +158,6 @@
                             تسجيل الدخول </a>
                         <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء
                             حساب </a>
-
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="auth-logout.html"> <i
                                 class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
@@ -243,7 +242,7 @@
                                     <a href="index.html" class="btn btn-soft-danger btn-hover">
                                         العودة للصفحة الرئيسية
                                     </a>
-                                    <a href="account.html" class="btn btn-primary btn-hover">عرض التفاصيل </a>
+                                    <a href="track-order.html" class="btn btn-primary btn-hover">عرض التفاصيل </a>
                                 </div>
                             </div>
                         </div>
