--- a/track-order.html
+++ b/track-order.html
@@ -157,15 +157,14 @@
                                 class="fa-sharp fa-light fa-arrow-right-to-arc"></i>
                             تسجيل الدخول </a>
                         <a class="dropdown-item" href="auth-signup.html"> <i class="fa-light fa-address-card"></i> انشاء
-                            حساب </a>
-
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="auth-logout.html"> <i
-                                class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
-                            الخروج </a>
+                            حساب </a <div class="dropdown-divider">
                     </div>
+                    <a class="dropdown-item" href="auth-logout.html"> <i
+                            class="fa-light fa-arrow-right-from-bracket"></i> تسجيل
+                        الخروج </a>
                 </div>
             </div>
+        </div>
         </div>
     </nav>
     <!-- subscribe Modal -->
