--- a/confirmation.html
+++ b/confirmation.html
@@ -235,8 +235,32 @@
                             </div>
                             <div class="text-center mt-5 pt-1">
                                 <h4 class="mb-3 text-capitalize">تم إتمام طلبك بنجاح!</h4>
-                                <p class="text-muted mb-2">سوف تتلقى رسالة تأكيد الطلب بالبريد الإلكتروني تحتوي على
-                                    تفاصيل طلبك.</p>
+                                <div class="selectedCustomerInfo mt-5 mb-5">
+                                    <div class="row ">
+                                        <div class="col-6 p-1 " data-aos=" fade-up">
+                                            <div class="info">
+                                                <img src="assets/images/avater2.webp" alt="">
+                                                <div class="text">
+                                                    <h5> أ.منار </h5>
+                                                    <p>خدمة العملاء</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-5 col-md-3 p-1 " data-aos=" fade-up">
+                                            <a class="contact" href="#!" target="_blank">
+                                                <i class="me-2 fa-brands fa-whatsapp-square"></i>
+                                                <p>تواصل عبر الواتس اب</p>
+                                            </a>
+                                        </div>
+                                        <div class="col-5 col-md-3 p-1 " data-aos=" fade-up">
+                                            <a class="contact" href="#!" target="_blank">
+                                                <i class="me-2 fa-solid fa-square-phone"></i>
+                                                <p>تواصل عبر الهاتف </p>
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <p class="text-muted mb-2"></p>
                                 <p class="text-muted mb-0">رقم الطلب : GHERT105467</p>
                                 <div class="mt-4 pt-2 hstack gap-2 justify-content-center">
                                     <a href="index.html" class="btn btn-soft-danger btn-hover">
