--- a/customer-service.html
+++ b/customer-service.html
@@ -174,11 +174,11 @@
             <div class="row justify-content-center">
                 <div class="col-lg-6">
                     <div class="text-center">
-                        <h1 class="text-white mb-0">اختيار مندوب خدمة العملاء</h1>
+                        <h1 class="text-white mb-0">خدمة العملاء</h1>
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb breadcrumb-light justify-content-center mt-4">
                                 <li class="breadcrumb-item"><a href="cv-details.html">تفاصيل السيرة الذاتية</a></li>
-                                <li class="breadcrumb-item active" aria-current="page">اختيار مندوب خدمة العملاء </li>
+                                <li class="breadcrumb-item active" aria-current="page">خدمة العملاء </li>
                             </ol>
                         </nav>
                     </div>
@@ -191,7 +191,6 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 p-2">
                     <div class="headTitle d-flex flex-column align-items-center justify-content-center gap-2 mb-5">
-                        <h1> اختر احد مندوبي خدمة العملاء </h1>
                         <p>
                             يرجى اختيار احد ممثلي خدمة العملاء لمواصلة إتمام التعاقد واكمال الإستقدام
                         </p>
@@ -221,7 +220,7 @@
                             </div>
                         </div>
                         <div class=" pt-4 p-2 text-center mt-4">
-                            <button type="submit" class="btn btn-dark animatedLink">
+                            <button type="submit" class="btn btn-dark w-25 animatedLink">
                                 تأكيد
                             </button>
                         </div>
