--- a/recruitment-request.html
+++ b/recruitment-request.html
@@ -225,8 +225,9 @@
             </div>
         </div>
     </section>
-    <section class="section">
+    <section class="section filter">
         <div class="container">
+            <button><i class="fas fa-sort"></i></button>
             <div class="ecommerce-product gap-4">
                 <div class="sidebar small-sidebar flex-shrink-0">
                     <div class="card overflow-hidden">
